# Machine-Vision

./: README.md  test_keypoint_detection.py  test_segmentation.py
bags/point_click_demo/: metadata.yaml
click_to_follow/: package.xml  setup.cfg  setup.py
click_to_follow/click_to_follow/: click_to_follow.py
experimenting_scripts/: median_mask_keypoint.py  median_mask_test.py  test_keypoint_detection.py  test_segmentation.py
